# tomatocat-agent

./: .gitignore  README.md  chat-history.json  chat_dialog.py  config.example.toml  config.json  config.toml  config.toml.example  config.yaml  config_mgr.py  error_log.py  file_handler.py  index.html  main.py  pet-log.txt  pet_systems.py  pet_window.py  proactive_sources.json  pyproject.toml  requirements.txt  script.js  sprites.py  styles.css  test_cli.py  tomato_timer.py  tomato_timer_state.json
agent/: config.py  config_models.py  context.py  provider.py  scheduler.py
agent/core/: drift_turn.py  passive_turn.py  proactive_turn.py  runner.py  runtime_support.py
agent/looping/: core.py  handlers.py  ports.py
agent/plugins/: base.py  context.py  manager.py
agent/policies/: history_route.py
agent/retrieval/: default_pipeline.py  protocol.py
agent/tools/: forget_memory.py  memorize.py  message_lookup.py  message_push.py  (+4 more)
bootstrap/: app.py  channel_host.py  channels.py  dashboard_api.py  memory.py  setup_wizard.py  tools.py
bus/: events.py  queue.py
core/: error_context.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
memory2/: embedder.py
proactive_v2/: agent_tick_factory.py  anyaction.py  config.py  config_loader.py  energy.py  event.py  loop.py  mcp_sources.py  memory_optimizer.py  presets.py  state.py  tools.py
prompts/: background.py
session/: manager.py  store.py
skills/: README.md
tomatocat/: __init__.py  checkpoint.py  config.py  dashboard_api.py  embedding.py  mcp_client.py  meme.py  memory.py  scheduler.py
(+125 files in other folders)
