[project]
name = "tomatocat"
version = "0.2.0"
description = "番茄猫 TomatoCat - 像素猫 AI 桌面助手"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.30.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "python-telegram-bot>=20.0",
    "tomli>=2.0.0",
    "mcp>=1.0.0",
    "numpy>=1.26.0",
    "websockets>=12.0",
    "PyQt6>=6.7.0",
    "PyQt6-Qt6>=6.7.0",
]

[project.scripts]
tomatocat = "tomatocat.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]